<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portfolio">

    <TextView android:id="@+id/header" android:text="@string/portfolio_header" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textSize="@dimen/abc_text_size_large_material"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/spotify"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_below="@+id/header"
        android:layout_marginTop="20dp"
        android:text="@string/spotify_streamer"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/scores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_below="@+id/spotify"
        android:layout_marginTop="20dp"
        android:text="@string/scores_app"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/library"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_below="@+id/scores"
        android:layout_marginTop="20dp"
        android:text="@string/library_app"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_below="@+id/library"
        android:layout_marginTop="20dp"
        android:text="@string/build_it_bigger"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/xyz"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_below="@+id/bigger"
        android:layout_marginTop="20dp"
        android:text="@string/xyz_reader"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/capstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:layout_below="@+id/xyz"
        android:layout_marginTop="20dp"
        android:text="@string/capstone"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
